--- a/src/index.css
+++ b/src/index.css
@@ -11,47 +11,33 @@ canvas {
   width: 100%;
   height: 100%;
 }
-
-#tip1 {
+.serverIP {
   position: absolute;
-  /* z-index: 99; */
-  top: 360px;
-  left: 200px;
-  width: 100px;
-  height: 30px;
-  border: 1px none greenyellow;
-  background-color: greenyellow;
-  border-radius: 10px;
-  padding-left: 10px;
-  
+  top: 80px;
+  left: 440px;
 }
-#tip2 {
+.content {
   position: absolute;
-  /* z-index: 99; */
-  top: 360px;
-  left: 500px;
-  width: 100px;
-  height: 30px;
-  border: 1px none greenyellow;
-  background-color: greenyellow;
-  border-radius: 10px;
-  padding-left: 10px;
+  /* top: 360px;
+  left: 175px; */
+  width: 150px;
+  height: 150px;
 }
-#tip3 {
+.tip {
   position: absolute;
-  /* z-index: 99; */
-  top: 360px;
-  left: 800px;
+  left: 15px;
   width: 100px;
   height: 30px;
   border: 1px none greenyellow;
   background-color: greenyellow;
   border-radius: 10px;
-  padding-left: 10px;
+  padding-top: 10px;
+  font-size: 15px;
+  text-align: center;
 }
 .triangle {
   position: absolute;
-  top: 25px;
+  top: 35px;
   left: 20px;
   width: 10px;
   height: 10px;
@@ -61,6 +47,12 @@ canvas {
   border-right: 1px none greenyellow;
   border-bottom: 1px none greenyellow;
   transform: rotate(45deg);
+}
+.ipAdd {
+  position: absolute;
+  top: 130px;
+  width: 150px;
+  text-align: center;
 }
 .addNode {
   position: absolute;
